# Voxel_Project

./: CMakeLists.txt
resources/shaders/: block.frag  block.vert  crosshair.vert  wireframe_cube.frag
resources/textures/spritesheet/: sprite_sheet.ase
src/: main.cpp
src/Core/: game.cpp  game.h
src/Core/Entity/Player/: Player.cpp  Player.h
src/Core/World/: block.cpp  block.frag  block.h  block.vert  chunk.cpp  chunk.h  world.cpp  world.h
src/Utility/: Camera.cpp  Camera.h  Crosshair.cpp  Crosshair.h  Debug.cpp  Debug.h  DebugDraw.cpp  DebugDraw.h  Physics.cpp  Physics.h  Shader.cpp  Shader.h
